@@ -203,20 +203,24 @@ public class StrategicBombingRaidPreBattle extends StrategicBombingRaidBattle
 		{
 			HashMap<Unit, HashSet<Unit>> targets = null;
 			Unit target = null;
-			final Collection<Unit> enemyTargets = m_battleSite.getUnits().getMatches(
+			final Collection<Unit> enemyTargetsTotal = m_battleSite.getUnits().getMatches(
 						new CompositeMatchAnd<Unit>(Matches.enemyUnit(bridge.getPlayerID(), m_data), Matches.UnitIsAtMaxDamageOrNotCanBeDamaged(m_battleSite).invert()));
 			for (final Unit unit : bombers)
 			{
-				if (enemyTargets.size() > 1 && games.strategy.triplea.Properties.getDamageFromBombingDoneToUnitsInsteadOfTerritories(m_data))
-					target = getRemote(bridge).whatShouldBomberBomb(m_battleSite, enemyTargets);
-				else if (!enemyTargets.isEmpty())
-					target = enemyTargets.iterator().next();
-				if (target != null)
+				final Collection<Unit> enemyTargets = Match.getMatches(enemyTargetsTotal, Matches.UnitIsLegalBombingTargetBy(unit));
+				if (!enemyTargets.isEmpty())
 				{
-					targets = new HashMap<Unit, HashSet<Unit>>();
-					targets.put(target, new HashSet<Unit>(Collections.singleton(unit)));
+					if (enemyTargets.size() > 1 && games.strategy.triplea.Properties.getDamageFromBombingDoneToUnitsInsteadOfTerritories(m_data))
+						target = getRemote(bridge).whatShouldBomberBomb(m_battleSite, enemyTargets);
+					else if (!enemyTargets.isEmpty())
+						target = enemyTargets.iterator().next();
+					if (target != null)
+					{
+						targets = new HashMap<Unit, HashSet<Unit>>();
+						targets.put(target, new HashSet<Unit>(Collections.singleton(unit)));
+					}
+					m_battleTracker.addBattle(new RouteScripted(m_battleSite), Collections.singleton(unit), true, m_attacker, bridge, null, targets, true);
 				}
-				m_battleTracker.addBattle(new RouteScripted(m_battleSite), Collections.singleton(unit), true, m_attacker, bridge, null, targets, true);
 			}
 		}
 	}
