@@ -20,10 +20,12 @@ import games.strategy.engine.data.Route;
 import games.strategy.engine.data.Territory;
 import games.strategy.engine.data.Unit;
 import games.strategy.engine.delegate.IDelegateBridge;
+import games.strategy.triplea.attatchments.UnitAttachment;
 import games.strategy.triplea.delegate.dataObjects.MoveDescription;
 import games.strategy.triplea.player.ITripleaPlayer;
 import games.strategy.triplea.ui.MovePanel;
 import games.strategy.util.CompositeMatchAnd;
+import games.strategy.util.Match;
 import games.strategy.util.Util;
 
 import java.util.Collection;
@@ -158,8 +160,10 @@ public class UndoableMove extends AbstractUndoableMove
 					if (routeUnitUsedToMove != null && routeUnitUsedToMove.getEnd() != null)
 					{
 						final Territory end = routeUnitUsedToMove.getEnd();
-						final Collection<Unit> enemyTargets = end.getUnits().getMatches(
+						final Collection<Unit> enemyTargetsTotal = end.getUnits().getMatches(
 									new CompositeMatchAnd<Unit>(Matches.enemyUnit(bridge.getPlayerID(), data), Matches.UnitIsAtMaxDamageOrNotCanBeDamaged(end).invert()));
+						final Collection<Unit> enemyTargets = Match.getMatches(enemyTargetsTotal,
+									Matches.unitIsOfTypes(UnitAttachment.getAllowedBombingTargetsIntersection(Match.getMatches(Collections.singleton(unit), Matches.UnitIsStrategicBomber), data)));
 						if (enemyTargets.size() > 1 && games.strategy.triplea.Properties.getDamageFromBombingDoneToUnitsInsteadOfTerritories(data)
 									&& !games.strategy.triplea.Properties.getRaidsMayBePreceededByAirBattles(data))
 							target = ((ITripleaPlayer) bridge.getRemote(bridge.getPlayerID())).whatShouldBomberBomb(end, enemyTargets);
